# germina-cli

./: Cargo.toml  README.md  build.rs
assets/templates/module/clang/: CMakeLists.txt
assets/templates/module/rust/: Cargo.toml
src/: assets.rs  cli.rs  config.rs  main.rs  ui.rs  util.rs  version.rs
src/core/: check.rs  launch.rs  mod.rs
src/node/: command.rs  event_mapper.rs  events.rs  mod.rs  process.rs  service.rs  session.rs
src/node/certs/: orchestrator_cert.der  orchestrator_key.der
src/node/session/: config.rs  events.rs  handlers.rs  listener.rs  mod.rs  protocol.rs
src/web/: command.rs  mod.rs
