[package]
name = "germina-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "germina"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
notify = "8.2.0"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
