[package]
name = "germina-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "germina"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
notify = "8.2.0"
quinn = "0.11.9"
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "logging",
    "std",
] }
rcgen = "0.14.7"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "io-util",
    "process",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
anyhow = "1.0.102"
